syntax = "proto3";

import "google/protobuf/timestamp.proto";

package postService;

option go_package = "/post";


message GetPostRequest {
  string email = 1;
  string password = 2;
}


message PostRequest {
  int32 ID = 1;
  int32 user_id =2;
  string name = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  string oid = 7;
  int64 vote_sum = 8;
  int32 status = 9;
}


message PostResponse {
  string message = 1;
}

message Page {
  string page = 1;
}

message PublicPost {
  int32 ID = 1;
  string name = 2;
  string text = 3;
}

message PublicPostResponse {
  repeated PublicPost publicPosts = 1;
}


service PostService {
  rpc CreatePost(PostRequest) returns (PostResponse);
  rpc UpdatePost(PostRequest) returns (PostResponse);
  rpc DeletePost(PostRequest) returns (PostResponse);
  rpc ListPosts(Page) returns (PublicPostResponse);
}