syntax = "proto3";

package ratingService;

option go_package = "/rating";

message UserRatingRequest{
  int32 id = 1;
  int32 user_id = 2;
  int32 post_id = 3;
  int32 vote = 4;
}

message RatingResponse {
  string message = 1;
}

service RatingService {
  rpc UserVote(UserRatingRequest) returns (RatingResponse);

}